Completing first correct version of the Open Api definition generation.
